Allow text wrapping of build titles to break words and be slightly less aggressive with unitisable width in grid mode. Issue #9

--- a/src/main/webapp/resources/cieye.css
+++ b/src/main/webapp/resources/cieye.css
@@ -37,6 +37,7 @@ div.target {
     margin: 2px 2px 2px 5px;
     padding: 1px;
     cursor: pointer;
+    word-wrap: break-word;
 }
 div.target.GREEN {
     color: #ffffff;
