--- a/src/main/webapp/resources/grid.css
+++ b/src/main/webapp/resources/grid.css
@@ -3,7 +3,7 @@
     font-weight: normal;
 }
 div.target {
-    width:24.25%;
+    width:24%;
     height:3.5em;
 	float:left;
     overflow: hidden;
